--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -11,7 +11,7 @@
         <!-- ============================================================== -->
         <div class="dashboard-header">
             <nav class="navbar navbar-expand-lg bg-white fixed-top">
-                <a class="navbar-brand" href="../index.html">Concept</a>
+                <a class="navbar-brand" href="#">Concept</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -155,7 +155,7 @@ John Abraham</span>is now following you
         <!-- ============================================================== -->
         <!-- left sidebar -->
         <!-- ============================================================== -->
-       <div class="nav-left-sidebar sidebar-dark">
+        <div class="nav-left-sidebar sidebar-dark">
             <div class="menu-list">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <a class="d-xl-none d-lg-none" href="#">Dashboard</a>
@@ -223,7 +223,7 @@ John Abraham</span>is now following you
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="page-header">
-                            <h2 class="pageheader-title">Members</h2>
+                            <h2 class="pageheader-title">Services</h2>
 
                             <div class="page-breadcrumb">
                                 <nav aria-label="breadcrumb">
@@ -300,29 +300,29 @@ John Abraham</span>is now following you
 {% block scripts %}
     {{ super() }}
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
+
     <script>
-        $(document).ready(function () {
-            $.ajax({
-                url: "{{ url_for('api.get_all_users') }}", success: function (result) {
-                    var data = result
-                    ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar);
-                    var grid = new ej.grids.Grid({
-                        dataSource: data,
-                         toolbar: ['Add', 'Edit', 'Delete'],
-                         editSettings: { allowEditing: true, allowAdding: true, allowDeleting: true, mode: 'Dialog' },
-                        columns: [
-                            {field: 'name', headerText: 'Full Names',  width: 120, type: 'string'},
-                            {field: 'id', width: 140, headerText: 'Id', type: 'number'},
-
-                        ],
-                        allowPaging: true,
-                        pageSettings: {pageSize: 7}
-                    });
-
-                    grid.appendTo('#Grid');
-                }
-            });
+        let data = new ej.data.DataManager({
+            url: "{{ url_for('api.get_categories') }}",
+            updateUrl: "#",
+            insertUrl: "{{ url_for('api.add_categories') }}",
+            removeUrl: "Home/Delete",
+            adaptor: new ej.data.UrlAdaptor
         });
+
+        ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar);
+        var grid = new ej.grids.Grid({
+            dataSource: data,
+            toolbar: ['Add', 'Edit', 'Delete'],
+            editSettings: {allowEditing: true, allowAdding: true, allowDeleting: true, mode: 'Dialog'},
+            columns: [
+                {field: 'name', headerText: 'Name', textAlign: 'Left', width: 90, type: 'string'},
+
+            ],
+            height: 315
+        });
+
+        grid.appendTo('#Grid');
 
     </script>
 {% endblock %}
