--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -250,7 +250,7 @@ John Abraham</span>is now following you
                         <div class="card">
                             <div class="card-header">
                                 <h5 class="mb-0">Print, Excel, CSV, PDF Buttons</h5>
-                                <p>Table of all the users and providers</p>
+                                <p>Table of all Services</p>
                             </div>
                             <div class="card-body">
                                 <div id="container">
