--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -313,7 +313,7 @@ John Abraham</span>is now following you
         ej.grids.Grid.Inject(ej.grids.Edit, ej.grids.Toolbar);
         var grid = new ej.grids.Grid({
             dataSource: data,
-            toolbar: ['Add', 'Edit', 'Delete'],
+            toolbar: ['Add', 'Edit', 'Delete','Search'],
             editSettings: {allowEditing: true, allowAdding: true, allowDeleting: true, mode: 'Dialog'},
             columns: [
                 {field: 'name', headerText: 'Name', textAlign: 'Left', width: 90, type: 'string'},
