--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -316,7 +316,7 @@ John Abraham</span>is now following you
             toolbar: ['Add', 'Edit', 'Delete','Search'],
             editSettings: {allowEditing: true, allowAdding: true, allowDeleting: true, mode: 'Dialog'},
             columns: [
-                {field: 'name', headerText: 'Name', textAlign: 'Left', width: 90, type: 'string'},
+                {field: 'name', headerText: 'Category Name', textAlign: 'Left', width: 90, type: 'string'},
 
             ],
             height: 315
