--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -301,7 +301,7 @@ John Abraham</span>is now following you
     {{ super() }}
     <script id="template" type="text/x-template">
     <div class="image">
-        <img src="${photo[0]}" alt="${EmployeeID}" />
+        <img src="${'photo[0]'}" alt="${photo[0]}" />
     </div>
 </script>
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
