--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -301,7 +301,7 @@ John Abraham</span>is now following you
     {{ super() }}
     <script id="template" type="text/x-template">
     <div class="image">
-        <img src="${photo}" alt="${photo}" height="20"/>
+        <img src="${photos}" alt="${photos}" height="20"/>
     </div>
 </script>
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
