--- a/blue/templates/providers.html
+++ b/blue/templates/providers.html
@@ -81,7 +81,7 @@
                                                             class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span
                                                             class="notification-list-user-name">
-John Abraham</span>is now following you
+                                                                 John Abraham</span>is now following you
                                                         <div class="notification-date">2 days ago</div>
                                                     </div>
                                                 </div>
@@ -354,7 +354,7 @@ John Abraham</span>is now following you
 
                                 headerText: 'Status',
                                 width: 20,
-                                textAlign: 'Left',
+                                textAlign: 'Center',
                                 template:
                                     `<div id="status" class="statustemp">
                                      <span class="statustxt">Active</span>
