--- a/blue/templates/service.html
+++ b/blue/templates/service.html
@@ -301,7 +301,7 @@ John Abraham</span>is now following you
     {{ super() }}
     <script id="template" type="text/x-template">
     <div class="image">
-        <img src="${photos}" alt="${photos}" height="20"/>
+        <img src="${photos}" alt="${photos}" height="30"/>
     </div>
 </script>
     <script src="https://cdn.syncfusion.com/ej2/dist/ej2.min.js" type="text/javascript"></script>
@@ -321,11 +321,11 @@ John Abraham</span>is now following you
             toolbar: ['Add', 'Edit', 'Delete','Search'],
             editSettings: {allowEditing: true, allowAdding: true, allowDeleting: true, mode: 'Dialog'},
             columns: [
-                {field: 'name', headerText: 'Category Name', textAlign: 'Left', width: 90, type: 'string'},
-                { headerText: 'Icon', textAlign: 'Left', width: 90, template: '#template'},
+                {field: 'name', headerText: 'Category Name', textAlign: 'Left', type: 'string'},
+                { headerText: 'Icon', textAlign: 'Center',  template: '#template'},
 
             ],
-            height: 315
+            height: 200
         });
 
         grid.appendTo('#Grid');
